--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: zwaldowski/match-label-action@v1
         with:
           allowed: major, minor, patch
+          default: patch
