--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,13 @@ jobs:
     name: Match PR Label
     runs-on: ubuntu-latest
     steps:
-      - uses: zwaldowski/match-label-action@v1
-        with:
-          allowed: major, minor, patch
-          default: patch
+     - name: Auto Increment Semver Action
+       uses: MCKanpolat/auto-semver-action@1.0.5
+       id: versioning
+       with:
+         releaseType: patch 
+         incrementPerCommit: false
+         github_token: ${{ secrets.GH_TOKEN }}
+
+     - name: Next Release Number
+       run: echo ${{ steps.versioning.outputs.version }}
