--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         uses: zwaldowski/semver-release-action@v1
         with:
           dry_run: true
-          bump: ${{ … }}
+          bump: ${{ steps.next_version.outputs.version }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
        # Do something to modify the repo using `${{ steps.next_version.outputs.version }}`.
       - run: echo "${{ steps.next_version.outputs.version }}"
