--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,8 @@ jobs:
         uses: christian-draeger/increment-semantic-version@1.0.2
         with:
           current-version: '0.0.1'
-          version-fragment: 'bug'    
+          version-fragment: 'bug'
+      - run: echo "${{ steps.bump_version.outputs.next-version }}"
       
       - name: Add to Commit
         uses: actions/checkout@main
