--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,7 +3,9 @@ name: Module Check & Validation
 on:
   pull_request:
     branches:
-      - 'release'
+      - 'test'
+      - 'development'
+      - 'main'
 
 jobs:
   tflint:
